main.tf
# Specify the provider and access details
#https://www.terraform.io/docs/providers/aws/
provider "aws" {
  region = "us-east-1"
}

# Create a VPC to launch our instances into
resource "aws_vpc" "default" {
  cidr_block = "10.0.0.0/16"
  tags {
    Name = "default"
  }
}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.default.id}"
  tags {
    Name = "default"
  }
}

# Grant the VPC internet access on its main route table
resource "aws_route" "internet_access" {
  route_table_id         = "${aws_vpc.default.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.default.id}"
}

resource "aws_route_table_association" "route_table_external" {
    subnet_id = "${aws_subnet.external.id}"
    route_table_id = "${aws_vpc.default.main_route_table_id}"
}

resource "aws_route_table_association" "route_table_internal" {
    subnet_id = "${aws_subnet.internal.id}"
    route_table_id = "${aws_vpc.default.main_route_table_id}"
}

# Create a management subnet to launch our instances into
resource "aws_subnet" "management" {
  vpc_id                  = "${aws_vpc.default.id}"
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "${var.availabilty_zone}"
  tags {
    Name = "management"
  }
}

# Create an external subnet to launch our instances into
resource "aws_subnet" "external" {
  vpc_id                  = "${aws_vpc.default.id}"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "${var.availabilty_zone}"
  tags {
    Name = "external"
  }
}

# Create an internal subnet to launch our instances into
resource "aws_subnet" "internal" {
  vpc_id                  = "${aws_vpc.default.id}"
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "${var.availabilty_zone}"
  tags {
    Name = "internal"
  }
}

resource "aws_network_interface" "external" {
    subnet_id = "${aws_subnet.external.id}"
    private_ips = ["10.0.1.10"]
    security_groups = ["${aws_security_group.allow_all.id}"]
    attachment {
        instance = "${aws_instance.f5.id}"
        device_index = 1
    }
}

resource "aws_network_interface" "internal" {
    depends_on = ["aws_network_interace.external"]
    subnet_id = "${aws_subnet.internal.id}"
    private_ips = ["10.0.2.10", "10.0.2.183"]
    security_groups = ["${aws_security_group.allow_all.id}"]
    attachment {
        instance = "${aws_instance.f5.id}"
        device_index = 2 
    }
}

resource "aws_eip" "eip_vip" {
  vpc                       = true
  network_interface         = "${aws_network_interface.internal.id}"
  associate_with_private_ip = "10.0.2.183"
}

resource "aws_security_group" "allow_all" {
  name        = "allow_all"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.default.id}"

  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#A key pair is used to control login access to EC2 instances
resource "aws_key_pair" "auth" {
  key_name   = "${var.key_name}"
  public_key = "${file(var.public_key_path)}"
}

resource "aws_instance" "f5" {
    ami = "${lookup(var.aws_amis, var.aws_region)}"
    instance_type = "${var.instance_type}"
    associate_public_ip_address = true
    private_ip = "10.0.0.10"
    availability_zone = "${aws_subnet.management.availability_zone}"
    subnet_id = "${aws_subnet.management.id}"
    security_groups = ["${aws_security_group.allow_all.id}"]
    vpc_security_group_ids = ["${aws_security_group.allow_all.id}"]
    user_data = "${file("userdata.sh")}"
    key_name = "${var.key_name}"
    root_block_device { delete_on_termination = true }
    tags {
        Name = "f5"
    }
}

resource "aws_instance" "ami1" {
    ami = "ami-9be6f38c"
    instance_type = "t2.micro"
    associate_public_ip_address = true
    private_ip = "10.0.2.167"
    availability_zone = "${aws_subnet.internal.availability_zone}"
    subnet_id = "${aws_subnet.internal.id}"
    security_groups = ["${aws_security_group.allow_all.id}"]
    vpc_security_group_ids = ["${aws_security_group.allow_all.id}"]
    user_data = "${file("userdata_ami.sh")}"
    key_name = "${var.key_name}"
    root_block_device { delete_on_termination = true }
    tags {
        Name = "ami1"
    }
}
